--- a/TASK 1 WEATHERVUE/styles.css
+++ b/TASK 1 WEATHERVUE/styles.css
@@ -3,3 +3,13 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50vh;
+    width: 50vw;
+    background-color: antiquewhite;
+}
