--- a/TASK-3/styles.css
+++ b/TASK-3/styles.css
@@ -1,5 +1,85 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma;
+    box-sizing: border-box;
+    font-family: 'Verdana', 'Geneva', 'Tahoma', sans-serif;
+    background-color: #f5f5dc;
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+input {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border: 2px solid #333;
+    transition: border-color 0.3s ease;
+}
+#todoContent{
+    width: 55%;
+}
+#todoDuration{
+    width: 30%;
+}
+
+#submitBtn {
+    width: 10%;
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+    border: 2px solid #333;
+    cursor: pointer;
+}
+
+input:focus, 
+#submitBtn:hover {
+    background-color: #333;
+    color: #fff;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.container {
+    padding: 1rem;
+    width: 90%;
+    max-width: 600px;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    list-style: none;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    border: 1px solid #333;
+    background-color: #fff;
+    transition: background-color 0.3s ease;
+}
+.timePara {
+    font-size: 1.2rem;
+}
+
+.completed {
+    text-decoration: line-through;
+    color: gray;
+    background-color: #333;
+}
+
+.delete-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
